# aws-elasticsearch-auth-proxy

./: .cfignore  .gitignore  DEVELOPMENT.md  Procfile  README.md  dev  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
aws_es_auth_proxy/: app.py  config.py  extensions.py  proxy.py
cf/: proxy-manifest.yml  secrets-example.yml
pip-tools/: dev-requirements.in  requirements.in
