[metadata]
name = aws_es_auth_proxy
version = attr: src.VERSION
description = Authentication bypass proxy for aws-elasticsearch-service instances on cloud.gov
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = cloudfoundry
license = CC0 1.0 Universal
classifiers =
    Development Status :: 1 - Planning
    Framework :: Flask
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires = file: requirements.txt
